--- a/ubuntu/requirements.txt
+++ b/ubuntu/requirements.txt
@@ -1,9 +1,9 @@
 numpy==1.19.2
+torch==1.7.1 (cpu)
+torchvision==0.8.2 (cpu)
 cellpose==0.6.1
 tifffile
 matplotlib==3.3.4
-torchvision==0.8.2
 opencv_python_headless==4.5.1.48
 streamlit==0.78.0
-torch==1.7.1
 Pillow==8.1.2
