--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+nbs/
 # C extensions
 *.so
 
+*.pkl
+*.models*
 # Distribution / packaging
 .Python
 build/
@@ -75,7 +77,7 @@ docs/_build/
 target/
 
 # Jupyter Notebook
-.ipynb_checkpoints
+*.ipynb_checkpoints
 
 # IPython
 profile_default/
