rmv sliders, update about, debugg

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,6 +12,7 @@ RUN pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pyto
 RUN pip install cellpose==0.6.1
 RUN pip install streamlit==0.79.0
 RUN pip install matplotlib
+RUN pip install tensorflow==2.4.1
 
 COPY . .
 ENTRYPOINT ["streamlit","run"]
