--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,12 +7,17 @@ WORKDIR /app
 
 # RUN pip install streamlit
 # RUN pip3 install -r requirements.txt
-RUN pip install --upgrade pip
+# RUN /usr/local/bin/python -m pip install --upgrade pip
+
+RUN pip install scikit-image
 RUN pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
-RUN pip install cellpose==0.6.1
 RUN pip install streamlit==0.79.0
 RUN pip install matplotlib
 RUN pip install tensorflow==2.4.1
+RUN pip install cellpose==0.6.1
+# cellpose requires large models, load these from cache with:
+RUN python -c 'from cellpose import models'
+
 
 COPY . .
 ENTRYPOINT ["streamlit","run"]
