--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -15,6 +15,7 @@ RUN pip install streamlit==0.81
 RUN pip install matplotlib
 RUN pip install tensorflow==2.4.1
 RUN pip install cellpose==0.6.1
+RUN pip install object_detection
 # cellpose requires large models, load these from cache with:
 RUN python -c 'from cellpose import models'
 
