thick and thin prediction implemented

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 bin/
+docker/models
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
