--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ share/python-wheels/
 MANIFEST
 bin/
 docker/models
+testing_aws
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
