running with gpu

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,18 +1,10 @@
-FROM python:3.8
-
+FROM tensorflow/tensorflow:latest-gpu
 EXPOSE 8501
 
 WORKDIR /app
 
-RUN pip install scikit-image
-RUN pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
-RUN pip install streamlit==0.81
-RUN pip install matplotlib
-RUN pip install tensorflow==2.4.1
-RUN pip install cellpose==0.6.1
-RUN pip install protobuf==3.13.0
-# cellpose requires large models, load these from cache with:
-RUN python -c 'from cellpose import models'
+# https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/dockerfiles/dockerfiles/devel-gpu-jupyter.Dockerfile
+
 
 RUN apt-get update && apt-get install -y \
     ffmpeg \
@@ -34,6 +26,17 @@ RUN python -m pip install -U pip
 RUN python -m pip install .
 
 WORKDIR /
+
+RUN pip install scikit-image
+# RUN pip install torch==1.8.1+cpu torchvision==0.9.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+RUN pip install torchvision==0.9.1
+RUN pip install streamlit==0.81
+RUN pip install matplotlib
+# RUN pip install tensorflow==2.4.1
+RUN pip install cellpose==0.6.1
+RUN pip install protobuf==3.13.0
+# cellpose requires large models, load these from cache with:
+RUN python -c 'from cellpose import models'
 
 COPY models .
 COPY load_css.py .
