--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ MANIFEST
 bin/
 docker/models
 testing_aws
+logging
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
